canary/canary-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: asia-northeast3-docker.pkg.dev/beha-data/nginx/test-nginx:v2
          ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
