canary/production-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: svc-production
    spec:
      containers:
        - name: nginx
          image: asia-northeast3-docker.pkg.dev/kjh-test-393501/jh-test/nginx-test:v1
          ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
